Add news and links to Enigma 1.21 to the homepage.
Todo:
 - Upload
 - Russian translation

--- a/homepage/input/download_de.html
+++ b/homepage/input/download_de.html
@@ -6,6 +6,7 @@ dieser Seite nach folgenden Kategorien sortiert:
 <ul>
   <li><a href="$$download$$#stable">Stabile Version</a> - Die aktuellsten
   Pakete - beginnen Sie hier.</li>
+  <li><a href="$$download$$#oldstable">Old stable Release</a> - The next older version of Enigma.</li>
   <li><a href="$$download$$#compilation">Den Quelltext kompilieren</a> -
   Hinweise f&uuml;r Unix.</li>
   <li><a href="$$download$$#announce">Ank&uuml;ndigungs-Mailingliste</a> - Hier
@@ -15,13 +16,79 @@ dieser Seite nach folgenden Kategorien sortiert:
   <li><a href="$$download$$#oldversions">Alte Versionen</a></li>
 </ul>
 
-<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
-  <a name="stable">Stabile Version (Version 1.20)</a></h3>
 
-  <p>Die md5- und sha256-Zahlen sind Checksummen, mit denen Sie die
+<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="back to top"></a>
+  <a name="stable">Stabile Version (Version 1.21)</a></h3>
+
+  <p>Die md5- und sha1-Zahlen sind Checksummen, mit denen Sie die
   Authentizit&auml;t und Exaktheit Ihres Downloads &uuml;berpr&uuml;fen
   k&ouml;nnen, unter Verwendung entsprechender Programme. F&uuml;r die
   Installation oder Nutzung von Enigma sind sie nicht von Bedeutung.</p>
+
+  <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows (getestet auf XP und 7)</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/Enigma-1.21.exe/download">
+        Vollst&auml;ndige Installation (1.21)</a> ca. 75 MB</li>
+    <li>md5 - ecf11c5b5508ef0155b0baa68605dde0</li>
+    <li>sha1 - c98529e12799212a5b8eb55077b6b0a2671c30ea</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Windows</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/Enigma-w32-1.21.zip/download">
+        .zip-Datei (1.21)</a> ca. 81 MB</li>
+    <li>md5 - 6f8a4d72335f27d4e32e9347b3a43bb0</li>
+    <li>sha1 - 9102ee3a6c162e0ffda5481a5c9ca99294d9d401</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Mac OS X</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/Enigma-1.21.dmg/download">
+        Full Installer (1.21)</a> ca. 64 MB</li>
+    <li>md5 - c605b740bac6e95bf1257217ff49a000</li>
+    <li>sha1 - ff0d8d9bc009b70481575e312b1a51c803c1e4b0</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Quellcode, revision 2513</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/enigma-1.21.tar.gz/download">
+        tar.gz (1.21)</a> ca. 57 MB</li>
+    <li>md5 - d2f4a099a704fdf7f12d024d2b7e6d1b</li>
+    <li>sha256 - 6ca021de7516308e353eefc52765b519e1558ee8</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Mac OS X Homebrew-Formel zum Selbstkompilieren</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.21/enigma-game.rb/download">
+        .rb-Datei (1.21)</a> ca. 3 kB, l&auml;dt zus&auml;tzlich den Quellcode herunter (siehe oben)</li>
+    <li>md5 - ec5f26da53d05abab43ae48742917c24</li>
+    <li>sha1 - 1847db55c9af5fbb2bbcbe9a1b8f93932b85646c</li>
+    </ul></li>
+
+  </ul>
+
+  <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
+  dem Download haben, versuchen Sie bitte einen direkten Download von
+  <a href="https://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
+
+  <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
+    bitte eine Beschreibung Ihres Problems an die <a
+    href="mailto:enigma-devel@nongnu.org">Enigma-Mailingliste</a>.</p>
+
+  </p>We werden Links zu Paketen f&uuml;r weitere Betriebssysteme hier zur
+  Verf&uuml;gung stellen, sobald sie von Dritten bereitgestellt werden.</p>
+
+  <!--<ul>
+    <li><a href="http://packages.debian.org/jessie/enigma">Debian (jessie)</a></li>
+    <li><a href="http://packages.debian.org/sid/enigma">Debian (sid)</a></li>
+    <li><a href="http://packages.ubuntu.com/saucy/enigma">Ubuntu (saucy)</a></li>
+    <li><a href="http://packages.ubuntu.com/trusty/enigma">Ubuntu (trusty)</a></li>
+    <li><a href="https://packages.gentoo.org/package/games-puzzle/enigma">Gentoo Linux</a></li>
+    <li><a href="https://admin.fedoraproject.org/pkgdb/acls/name/enigma">Fedora</a></li>
+    <li><a href="https://software.opensuse.org/package/enigma">openSUSE</a></li>
+    <li><a href="https://aur.archlinux.org/packages/enigma_sdl/">Arch Linux</a></li>
+    <li><a href="https://www.freshports.org/games/enigma/">FreeBSD</a></li>
+  </ul>-->
+
+<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
+  <a name="oldstable">Alte stabile Version (Version 1.20)</a></h3>
 
   <ul>
   <li><ul style="list-style-type:none"><li><b>Windows 32 bit (getestet auf XP und 7)</b>
@@ -54,15 +121,6 @@ dieser Seite nach folgenden Kategorien sortiert:
 
   </ul>
 
-  <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
-  dem Download haben, versuchen Sie bitte einen direkten Download von
-  <a href="https://sourceforge.net/projects/enigma-game/files/">
-  sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
-
-  <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
-    bitte eine Beschreibung Ihres Problems an die <a
-    href="mailto:enigma-devel@nongnu.org">Enigma-Mailingliste</a>.</p>
-
   <p>Pakete f&uuml;r andere Betriebssysteme wurden von Dritten zur
   Verf&uuml;gung gestellt:</p>
 
@@ -78,81 +136,6 @@ dieser Seite nach folgenden Kategorien sortiert:
     <li><a href="https://www.freshports.org/games/enigma/">FreeBSD</a></li>
   </ul>
 
-<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
-  <a name="stable">Alte stabile Version (Version 1.01)</a></h3>
-
-  <p>Neben den 'vollst&auml;ndigen' Paketen stellen wir auch
-  kleinere 'minimale' Pakete f&uuml;r User mit geringerer Bandbreite
-  (z.B. Modem) zur Verf&uuml;gung. 'Minimale' and 'Quelltext-Pakete' enthalten
-  nicht das 'Vorschaubilder'-Paket. Sie sind dennoch vollst&auml;ndig, da
-  fehlende Vorschaubilder direkt in Enigma erzeugt werden, was lediglich ein
-  paar Sekunden bei den ersten Aufrufen des Levelmen&uuml;s kostet.</p>
-
-  <p>Die md5- und sha256-Zahlen sind Checksummen, mit denen Sie die
-  Authentizit&auml;t und Exaktheit Ihres Downloads &uuml;berpr&uuml;fen
-  k&ouml;nnen, unter Verwendung entsprechender Programme. F&uuml;r die
-  Installation oder Nutzung von Enigma sind sie nicht von Bedeutung.</p>
-
-  <ul>
-  <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="https://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
-        Vollst&auml;ndige Installation (1.01)</a> etwa 15 MB</li>
-    <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
-    <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
-        Minimale Installation (1.01)</a> etwa 11 MB</li>
-    <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
-    <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
-        Minimale Installation als Zip (1.01)</a> etwa 11 MB</li>
-    <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
-    <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Mac OS X universell</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
-        Vollst&auml;ndige Installation (1.01)</a> etwa 18 MB</li>
-    <li>md5 - 693576941ab19020d82b44095e0f4699</li>
-    <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
-        Paket tgz (1.01)</a> etwa 10 MB</li>
-    <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
-    <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Quellcode 32/64-Bit kompatibel, Revision 1914</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
-        tar.gz (1.01)</a> etwa 10 MB</li>
-    <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
-    <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Levelvorschau-Bilder</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
-        Zip (1.01)</a> etwa 4 MB</li>
-    <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
-    <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
-    </ul></li>
-
-  </ul>
-
-  <p>Alle Pakete stehen bei sourceforge zur Verf&uuml;gung. Falls Sie Probleme mit
-  dem Download haben, versuchen Sie bitte einen direkten Download von
-  <a href="https://sourceforge.net/projects/enigma-game/files/">
-  sourceforge</a> und probieren Sie alle verf&uuml;gbaren Server aus.<p>
-
-  <p>Wenn Sie Probleme mit einem der obigen Pakete haben, schreiben Sie
-    bitte eine Beschreibung Ihres Problems an die <a
-    href="mailto:enigma-devel@nongnu.org">Enigma-Mailingliste</a>.</p>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="compilation">Quellcode kompilieren unter Unix</a></h3>
@@ -233,8 +216,62 @@ halbes Dutzend Mails im Jahr ausmachte.</p>
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Nach oben" border="0" title="back to top"></a>
   <a name="oldversions">Alte Versionen</a></h3>
 
+  <p>F&uuml;r Version 1.01 w&auml;hlen Sie bitte aus den folgenden Links.
+
+  <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
+    <a href="https://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
+        Vollst&auml;ndige Installation (1.01)</a> etwa 15 MB</li>
+    <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
+    <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
+        Minimale Installation (1.01)</a> etwa 11 MB</li>
+    <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
+    <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Windows '95 und sp&auml;ter, einschlie&szlig;lich Windows 7</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
+        Minimale Installation als Zip (1.01)</a> etwa 11 MB</li>
+    <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
+    <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Mac OS X universell</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
+        Vollst&auml;ndige Installation (1.01)</a> etwa 18 MB</li>
+    <li>md5 - 693576941ab19020d82b44095e0f4699</li>
+    <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
+        Paket tgz (1.01)</a> etwa 10 MB</li>
+    <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
+    <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Quellcode 32/64-Bit kompatibel, Revision 1914</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
+        tar.gz (1.01)</a> etwa 10 MB</li>
+    <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
+    <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Levelvorschau-Bilder</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
+        Zip (1.01)</a> etwa 4 MB</li>
+    <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
+    <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
+    </ul></li>
+
+  </ul>
+
   <p>Aufgrund von &Auml;nderungen im Repository und den Downloadservern
-  befinden sich die &auml;lteren Enigma-Versionen auf verschiedenen
+  befinden sich noch &auml;ltere Enigma-Versionen auf verschiedenen
   Servern. Besuchen Sie daf&uuml;r</p>
   <ul>
   <li><a href="https://sourceforge.net/projects/enigma-game/files/">
@@ -244,3 +281,5 @@ halbes Dutzend Mails im Jahr ausmachte.</p>
   <li><a href="https://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
     mag-heut.net</a>&nbsp;&nbsp;f&uuml;r alte Windows-Versionen.</li>
   </ul>
+
+
