--- a/homepage/input/download_ru.html
+++ b/homepage/input/download_ru.html
@@ -5,6 +5,7 @@
 
 <ul>
   <li><a href="$$download$$#stable">Стабильный выпуск</a> - Самые новые выпущенные пакеты - начните отсюда.</li>
+  <li><a href="$$download$$#oldstable">Old stable Release</a> - The next older version of Enigma.</li>
   <li><a href="$$download$$#compilation">Сборка из исходных кодов</a> - Советы для Unix. </li>
   <li><a href="$$download$$#announce">Список рассылки с уведомлением о выпуске</a> -
   Получать по почте уведомление о выходе нового выпуска  Enigma.</li>
@@ -13,14 +14,78 @@
 </ul>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
-  <a name="stable">Стабильный выпуск (Версия 1.20)</a></h3>
+  <a name="stable">Стабильный выпуск (Версия 1.21)</a></h3>
 
-  <p>Числа md5 и sha256 ниже это контрольные суммы, с помощью которых Вы можете проверить подлинность и полноту
+  <p>Числа md5 и sha1 ниже это контрольные суммы, с помощью которых Вы можете проверить подлинность и полноту
   Ваших загрузок. Они не влияют на установку и процесс игры в Enigma.</p>
 
   <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows (tested on XP and 7)</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/Enigma-w32-1.21.exe/download">
+        Full Installer (1.21)</a> appr. 75 MB</li>
+    <li>md5 - ecf11c5b5508ef0155b0baa68605dde0</li>
+    <li>sha1 - c98529e12799212a5b8eb55077b6b0a2671c30ea</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Windows</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/Enigma-w32-1.21.zip/download">
+        .zip file (1.21)</a> appr. 81 MB</li>
+    <li>md5 - 6f8a4d72335f27d4e32e9347b3a43bb0</li>
+    <li>sha1 - 9102ee3a6c162e0ffda5481a5c9ca99294d9d401</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Mac OS X</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/Enigma-1.21.dmg/download">
+        Full Installer (1.21)</a> appr. 64 MB</li>
+    <li>md5 - c605b740bac6e95bf1257217ff49a000</li>
+    <li>sha1 - ff0d8d9bc009b70481575e312b1a51c803c1e4b0</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Source Code 32/64-bit compatible, revision 2513</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.21/enigma-1.21.tar.gz/download">
+        tar.gz (1.21)</a> appr. 57 MB</li>
+    <li>md5 - d2f4a099a704fdf7f12d024d2b7e6d1b</li>
+    <li>sha256 - 6ca021de7516308e353eefc52765b519e1558ee8</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Mac OS X Homebrew formula for compilation</b>
+    <a href="http://sourceforge.net/projects/enigma-game/files/Release%201.21/enigma-game.rb/download">
+        .rb file (1.21)</a> appr. 3 kB, will download source (see above)</li>
+    <li>md5 - ec5f26da53d05abab43ae48742917c24</li>
+    <li>sha1 - 1847db55c9af5fbb2bbcbe9a1b8f93932b85646c</li>
+    </ul></li>
+
+  </ul>
+
+  <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
+  <a href="https://sourceforge.net/projects/enigma-game/files/">
+  sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
+
+  <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
+    href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
+
+  </p>We will provide links to packages for some other operating systems here as they
+  are made available by third parties.</p>
+
+  <!--<ul>
+    <li><a href="http://packages.debian.org/jessie/enigma">Debian (jessie)</a></li>
+    <li><a href="http://packages.debian.org/sid/enigma">Debian (sid)</a></li>
+    <li><a href="http://packages.ubuntu.com/saucy/enigma">Ubuntu (saucy)</a></li>
+    <li><a href="http://packages.ubuntu.com/trusty/enigma">Ubuntu (trusty)</a></li>
+    <li><a href="https://packages.gentoo.org/package/games-puzzle/enigma">Gentoo Linux</a></li>
+    <li><a href="https://admin.fedoraproject.org/pkgdb/acls/name/enigma">Fedora</a></li>
+    <li><a href="https://software.opensuse.org/package/enigma">openSUSE</a></li>
+    <li><a href="https://aur.archlinux.org/packages/enigma_sdl/">Arch Linux</a></li>
+    <li><a href="https://www.freshports.org/games/enigma/">FreeBSD</a></li>
+  </ul>-->
+
+
+<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
+  <a name="oldstable">Old stable Release (Версия 1.20)</a></h3>
+
+  <ul>
   <li><ul style="list-style-type:none"><li><b>Windows 32 bit (tested on XP and 7)</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-w32-1.20.exe/download">
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.20/Enigma-1.20.exe/download">
 	Полный мастер установки (1.20)</a> прибл. 40 MB</li>
     <li>md5 - f1e0034d4bc75d13a4076bd6f34bb24c</li>
     <li>sha256 - 91f5aadbd2515c312841f1a28055fbff3e961905daf2d6216b5a51eaac2afe99</li>
@@ -49,13 +114,6 @@
 
   </ul>
 
-  <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
-  <a href="https://sourceforge.net/projects/enigma-game/files/">
-  sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
-
-  <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
-    href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
-
   <p>Пакеты для некоторых других операционных систем предоставляются третьими лицами:</p>
 
   <ul>
@@ -70,75 +128,6 @@
     <li><a href="https://www.freshports.org/games/enigma/">FreeBSD</a></li>
   </ul>
 
-<h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
-  <a name="stable">Стабильный выпуск (Версия 1.01)</a></h3>
-
-  <p>Наряду с 'Полными' пакетами, мы предлагаем урезанные 'Минимальные' пакеты
-  для пользователей с узкой полосой пропускания. Пакеты 'Минимальный' и 'Исходные коды' не включают в себя пакет
-  'Эскизы'. Пакеты при этом абсолютно полные, потому что не включенные эскизы
-  сгенерируются на лету в течение нескольких секунд при первом вызове меню уровней.</p>
-
-  <p>Числа md5 и sha256 ниже это контрольные суммы, с помощью которых Вы можете проверить подлинность и полноту
-  Ваших загрузок. Они не влияют на установку и процесс игры в Enigma.</p>
-
-  <ul>
-  <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="https://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
-        Полный мастер установки (1.01)</a> прибл. 15 MB</li>
-    <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
-    <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
-        Минимальный мастер установки (1.01)</a> прибл. 11 MB</li>
-    <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
-    <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
-        Минимальный Zip-архив (1.01)</a> прибл. 11 MB</li>
-    <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
-    <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Универсальный мастер установки для Mac OS X</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
-        Полный мастер установки (1.01)</a> прибл. 18 MB</li>
-    <li>md5 - 693576941ab19020d82b44095e0f4699</li>
-    <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
-        Пакет tgz (1.01)</a> прибл. 10 MB</li>
-    <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
-    <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Исходные коды, совместимые с 32/64-bit, ревизия 1914</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
-        tar.gz (1.01)</a> прибл. 10 MB</li>
-    <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
-    <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
-    </ul></li>
-
-  <li><ul style="list-style-type:none"><li><b>Эскизы</b>
-    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
-        Zip-архив (1.01)</a> прибл. 4 MB</li>
-    <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
-    <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
-    </ul></li>
-
-  </ul>
-
-  <p>Все пакеты доступны на sourceforge. В случае возникновения проблем с загрузкой попытайтесь скачать напрямую с
-  <a href="https://sourceforge.net/projects/enigma-game/files/">
-  sourceforge</a> и попробуйте каждый из предложенных серверов.<p>
-
-  <p>Пожалуйста, сообщите о проблемах с любым из этих пакетов в <a
-    href="mailto:enigma-devel@nongnu.org">список рассылки Enigma</a>.</p>
 
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="compilation">Сборка из исходных кодов под Unix</a></h3>
@@ -211,8 +200,62 @@ Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
 <h3><a class="arrowup" href="$$download$$"><img src="$$imagedir$$/nav_up.gif" alt="Up" border="0" title="К началу страницы"></a>
   <a name="oldversions">Старые версии</a></h3>
 
-  <p>Из-за изменений в репозитории исходных кодов и серверах загрузки, старые версии
-  Enigma можно найти на различных серверах. Посмотрите на</p>
+  <p>For the 1.01-version of Enigma, please choose below.</p>
+
+  <ul>
+  <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
+    <a href="https://downloads.sourceforge.net/project/enigma-game/Release%201.01/Enigma-1.01-w7.exe">
+        Полный мастер установки (1.01)</a> прибл. 15 MB</li>
+    <li>md5 - d2a8a16453880660647afd4111d0c81f</li>
+    <li>sha256 - 2d34428d57e52bff9338d358fa37d74326c6c51849fa2e8a1aedbe0d2cb12245</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-min-w7.exe">
+        Минимальный мастер установки (1.01)</a> прибл. 11 MB</li>
+    <li>md5 - 1c434e0cc327478228c828e9fe457773</li>
+    <li>sha256 - 10391c3a09530221671c16dbae2653132d82566f84fab50de420e4f437477d09</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Windows '95 и выше, включая Windows 7</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-w32-1.01-w7.zip">
+        Минимальный Zip-архив (1.01)</a> прибл. 11 MB</li>
+    <li>md5 - 269afb849ec00966a9a4fe8488689143</li>
+    <li>sha256 - a738a8b1508675bfaf12db07b7bdb42356f013f4c2d5c2a494516d78d25070a1</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Универсальный мастер установки для Mac OS X</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/Enigma-1.01-OSX.dmg">
+        Полный мастер установки (1.01)</a> прибл. 18 MB</li>
+    <li>md5 - 693576941ab19020d82b44095e0f4699</li>
+    <li>sha256 - e2822599dfc8e0a888d729f5ad2ce7cdbf2e1e87bca508c8da76c48fbb0023ab</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Slackware 10++</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-i686-slw1.tgz">
+        Пакет tgz (1.01)</a> прибл. 10 MB</li>
+    <li>md5 - fb1591cb075d380304b4f91c27d95c89</li>
+    <li>sha256 - 65d31f3e4a78db7850dd1016ad1eee66794fdec985c3470619e1468bbba25f45</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Исходные коды, совместимые с 32/64-bit, ревизия 1914</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-r1914.tar.gz">
+        tar.gz (1.01)</a> прибл. 10 MB</li>
+    <li>md5 - f60ccc10326b49b558e4e280075b0e70</li>
+    <li>sha256 - 991ca677def3ecda3d52b3cc6ea2b0e8393c47f61168a30ffa9efc9069ffedad</li>
+    </ul></li>
+
+  <li><ul style="list-style-type:none"><li><b>Эскизы</b>
+    <a href="https://sourceforge.net/projects/enigma-game/files/Release%201.01/enigma-1.01-previews.zip">
+        Zip-архив (1.01)</a> прибл. 4 MB</li>
+    <li>md5 - 770f81e8d8ef92d8374c8932c3e1a26e</li>
+    <li>sha256 - a8ab7a03ce6547e86c44aa9962e171417cb63f8bc2b3527af9da42637e6115b6</li>
+    </ul></li>
+
+  </ul>
+
+  <p>Due to changes in source code repository and download servers, older versions
+  of Enigma can be found on different servers. Have a look at</p>
   <ul>
   <li><a href="https://sourceforge.net/projects/enigma-game/files/">
     sourceforge</a>&nbsp;&nbsp;если ищете недавние выпуски.</li>
@@ -221,3 +264,5 @@ Enigma, который ещё не превосходил полудюжины сообщений в течение года.</p>
   <li><a href="https://www.mag-heut.net/blackball/index.php?act=ST&amp;f=2&amp;t=118">
     mag-heut.net</a>&nbsp;&nbsp;если ищете старые версии для Windows.</li>
   </ul>
+
+
