--- a/homepage/input/table-solved.html
+++ b/homepage/input/table-solved.html
@@ -1,34 +1,36 @@
   <table>
-    <caption>$$Solved_Level_Statistics$$ $$December$$ 2014</caption>
+    <caption>$$Solved_Level_Statistics$$ $$January$$ 2015</caption>
     <colgroup><col width="150"><col width="80"><col width="100"><col width="80"><col width="100"><col width="80"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$difficult$$</th><td>$$difficult_percent$$</td><th>$$easy$$</th><td>$$easy_percent$$</td></tr>
-    <tr><td class="left">dev0</td><td class="num">92.35 %</td><td class="num">2195/2400</td><td class="num">91.46 %</td><td class="num">366/373</td><td class="num">98.12 %</td></tr>
-    <tr><td class="left">Craven</td><td class="num">87.63 %</td><td class="num">2101/2400</td><td class="num">87.54 %</td><td class="num">329/373</td><td class="num">88.20 %</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">83.88 %</td><td class="num">1993/2400</td><td class="num">83.04 %</td><td class="num">333/373</td><td class="num">89.28 %</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">76.13 %</td><td class="num">1766/2400</td><td class="num">73.58 %</td><td class="num">345/373</td><td class="num">92.49 %</td></tr>
-    <tr><td class="left">Daisy</td><td class="num">68.66 %</td><td class="num">1681/2400</td><td class="num">70.04 %</td><td class="num">223/373</td><td class="num">59.79 %</td></tr>
-    <tr><td class="left">H-J.Epting</td><td class="num">67.29 %</td><td class="num">1571/2400</td><td class="num">65.46 %</td><td class="num">295/373</td><td class="num">79.09 %</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">58.56 %</td><td class="num">1392/2400</td><td class="num">58.00 %</td><td class="num">232/373</td><td class="num">62.20 %</td></tr>
-    <tr><td class="left">ais523</td><td class="num">58.20 %</td><td class="num">1402/2400</td><td class="num">58.42 %</td><td class="num">212/373</td><td class="num">56.84 %</td></tr>
-    <tr><td class="left">Kejvi</td><td class="num">52.83 %</td><td class="num">1234/2400</td><td class="num">51.42 %</td><td class="num">231/373</td><td class="num">61.93 %</td></tr>
-    <tr><td class="left">gorg</td><td class="num">51.39 %</td><td class="num">1154/2400</td><td class="num">48.08 %</td><td class="num">271/373</td><td class="num">72.65 %</td></tr>
-    <tr><td class="left">Ale</td><td class="num">50.23 %</td><td class="num">1097/2400</td><td class="num">45.71 %</td><td class="num">296/373</td><td class="num">79.36 %</td></tr>
-    <tr><td class="left">U-Punkt</td><td class="num">50.23 %</td><td class="num">1151/2400</td><td class="num">47.96 %</td><td class="num">242/373</td><td class="num">64.88 %</td></tr>
-    <tr><td class="left">Valkyrie2</td><td class="num">46.63 %</td><td class="num">1253/2400</td><td class="num">52.21 %</td><td class="num">40/373</td><td class="num">10.72 %</td></tr>
-    <tr><td class="left">Zecks</td><td class="num">44.90 %</td><td class="num">1024/2400</td><td class="num">42.67 %</td><td class="num">221/373</td><td class="num">59.25 %</td></tr>
-    <tr><td class="left">Another</td><td class="num">43.09 %</td><td class="num">1030/2400</td><td class="num">42.92 %</td><td class="num">165/373</td><td class="num">44.24 %</td></tr>
-    <tr><td class="left">maggie</td><td class="num">37.58 %</td><td class="num">742/2400</td><td class="num">30.92 %</td><td class="num">300/373</td><td class="num">80.43 %</td></tr>
-    <tr><td class="left">BigSlick</td><td class="num">34.15 %</td><td class="num">795/2400</td><td class="num">33.13 %</td><td class="num">152/373</td><td class="num">40.75 %</td></tr>
-    <tr><td class="left">hadanie7</td><td class="num">32.24 %</td><td class="num">794/2400</td><td class="num">33.08 %</td><td class="num">100/373</td><td class="num">26.81 %</td></tr>
-    <tr><td class="left">Raoul</td><td class="num">30.76 %</td><td class="num">690/2400</td><td class="num">28.75 %</td><td class="num">163/373</td><td class="num">43.70 %</td></tr>
-    <tr><td class="left">Mnemosyne</td><td class="num">26.69 %</td><td class="num">610/2400</td><td class="num">25.42 %</td><td class="num">130/373</td><td class="num">34.85 %</td></tr>
-    <tr><td class="left">Angolino</td><td class="num">26.47 %</td><td class="num">609/2400</td><td class="num">25.38 %</td><td class="num">125/373</td><td class="num">33.51 %</td></tr>
-    <tr><td class="left">Velstadt</td><td class="num">25.46 %</td><td class="num">661/2400</td><td class="num">27.54 %</td><td class="num">45/373</td><td class="num">12.06 %</td></tr>
-    <tr><td class="left">Mark P.</td><td class="num">24.34 %</td><td class="num">539/2400</td><td class="num">22.46 %</td><td class="num">136/373</td><td class="num">36.46 %</td></tr>
-    <tr><td class="left">the_candyman</td><td class="num">21.93 %</td><td class="num">581/2400</td><td class="num">24.21 %</td><td class="num">27/373</td><td class="num">7.24 %</td></tr>
-    <tr><td class="left">Jens</td><td class="num">18.39 %</td><td class="num">346/2400</td><td class="num">14.42 %</td><td class="num">164/373</td><td class="num">43.97 %</td></tr>
-    <tr><td class="left">grimes</td><td class="num">11.07 %</td><td class="num">307/2400</td><td class="num">12.79 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
-    <tr><td class="left">alfix</td><td class="num">8.19 %</td><td class="num">208/2400</td><td class="num">8.67 %</td><td class="num">19/373</td><td class="num">5.09 %</td></tr>
-    <tr><td class="left">Chib</td><td class="num">7.83 %</td><td class="num">217/2400</td><td class="num">9.04 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
-    <tr><td class="left">gpc</td><td class="num">4.72 %</td><td class="num">106/2400</td><td class="num">4.42 %</td><td class="num">25/373</td><td class="num">6.70 %</td></tr>
+    <tr><td class="left">dev0</td><td class="num">91.74 %</td><td class="num">2280/2510</td><td class="num">90.84 %</td><td class="num">387/397</td><td class="num">97.48 %</td></tr>
+    <tr><td class="left">Craven</td><td class="num">82.49 %</td><td class="num">2075/2510</td><td class="num">82.67 %</td><td class="num">323/397</td><td class="num">81.36 %</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">79.33 %</td><td class="num">1977/2510</td><td class="num">78.76 %</td><td class="num">329/397</td><td class="num">82.87 %</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">74.37 %</td><td class="num">1809/2510</td><td class="num">72.07 %</td><td class="num">353/397</td><td class="num">88.92 %</td></tr>
+    <tr><td class="left">H-J.Epting</td><td class="num">64.98 %</td><td class="num">1595/2510</td><td class="num">63.55 %</td><td class="num">294/397</td><td class="num">74.06 %</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">64.60 %</td><td class="num">1660/2510</td><td class="num">66.14 %</td><td class="num">218/397</td><td class="num">54.91 %</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">58.38 %</td><td class="num">1451/2510</td><td class="num">57.81 %</td><td class="num">246/397</td><td class="num">61.96 %</td></tr>
+    <tr><td class="left">Volker</td><td class="num">55.14 %</td><td class="num">1468/2510</td><td class="num">58.49 %</td><td class="num">135/397</td><td class="num">34.01 %</td></tr>
+    <tr><td class="left">ais523</td><td class="num">54.59 %</td><td class="num">1379/2510</td><td class="num">54.94 %</td><td class="num">208/397</td><td class="num">52.39 %</td></tr>
+    <tr><td class="left">Kejvi</td><td class="num">49.43 %</td><td class="num">1211/2510</td><td class="num">48.25 %</td><td class="num">226/397</td><td class="num">56.93 %</td></tr>
+    <tr><td class="left">U-Punkt</td><td class="num">48.40 %</td><td class="num">1164/2510</td><td class="num">46.37 %</td><td class="num">243/397</td><td class="num">61.21 %</td></tr>
+    <tr><td class="left">gorg</td><td class="num">48.23 %</td><td class="num">1137/2510</td><td class="num">45.30 %</td><td class="num">265/397</td><td class="num">66.75 %</td></tr>
+    <tr><td class="left">Ale</td><td class="num">46.85 %</td><td class="num">1072/2510</td><td class="num">42.71 %</td><td class="num">290/397</td><td class="num">73.05 %</td></tr>
+    <tr><td class="left">Valkyrie2</td><td class="num">43.86 %</td><td class="num">1237/2510</td><td class="num">49.28 %</td><td class="num">38/397</td><td class="num">9.57 %</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">41.86 %</td><td class="num">1001/2510</td><td class="num">39.88 %</td><td class="num">216/397</td><td class="num">54.41 %</td></tr>
+    <tr><td class="left">Another</td><td class="num">40.28 %</td><td class="num">1010/2510</td><td class="num">40.24 %</td><td class="num">161/397</td><td class="num">40.55 %</td></tr>
+    <tr><td class="left">maggie</td><td class="num">37.43 %</td><td class="num">767/2510</td><td class="num">30.56 %</td><td class="num">321/397</td><td class="num">80.86 %</td></tr>
+    <tr><td class="left">Klaus</td><td class="num">35.23 %</td><td class="num">931/2510</td><td class="num">37.09 %</td><td class="num">93/397</td><td class="num">23.43 %</td></tr>
+    <tr><td class="left">BigSlick</td><td class="num">31.82 %</td><td class="num">777/2510</td><td class="num">30.96 %</td><td class="num">148/397</td><td class="num">37.28 %</td></tr>
+    <tr><td class="left">hadanie7</td><td class="num">30.00 %</td><td class="num">775/2510</td><td class="num">30.88 %</td><td class="num">97/397</td><td class="num">24.43 %</td></tr>
+    <tr><td class="left">Raoul</td><td class="num">29.24 %</td><td class="num">691/2510</td><td class="num">27.53 %</td><td class="num">159/397</td><td class="num">40.05 %</td></tr>
+    <tr><td class="left">Mnemosyne</td><td class="num">24.84 %</td><td class="num">595/2510</td><td class="num">23.71 %</td><td class="num">127/397</td><td class="num">31.99 %</td></tr>
+    <tr><td class="left">Angolino</td><td class="num">24.80 %</td><td class="num">597/2510</td><td class="num">23.78 %</td><td class="num">124/397</td><td class="num">31.23 %</td></tr>
+    <tr><td class="left">Velstadt</td><td class="num">23.84 %</td><td class="num">648/2510</td><td class="num">25.82 %</td><td class="num">45/397</td><td class="num">11.34 %</td></tr>
+    <tr><td class="left">Mark P.</td><td class="num">22.70 %</td><td class="num">525/2510</td><td class="num">20.92 %</td><td class="num">135/397</td><td class="num">34.01 %</td></tr>
+    <tr><td class="left">the_candyman</td><td class="num">20.33 %</td><td class="num">565/2510</td><td class="num">22.51 %</td><td class="num">26/397</td><td class="num">6.55 %</td></tr>
+    <tr><td class="left">Jens</td><td class="num">17.13 %</td><td class="num">337/2510</td><td class="num">13.43 %</td><td class="num">161/397</td><td class="num">40.55 %</td></tr>
+    <tr><td class="left">grimes</td><td class="num">10.42 %</td><td class="num">303/2510</td><td class="num">12.07 %</td><td class="num">0/397</td><td class="num">0.00 %</td></tr>
+    <tr><td class="left">alfix</td><td class="num">7.46 %</td><td class="num">200/2510</td><td class="num">7.97 %</td><td class="num">17/397</td><td class="num">4.28 %</td></tr>
+    <tr><td class="left">Chib</td><td class="num">7.09 %</td><td class="num">206/2510</td><td class="num">8.21 %</td><td class="num">0/397</td><td class="num">0.00 %</td></tr>
+    <tr><td class="left">gpc</td><td class="num">4.40 %</td><td class="num">105/2510</td><td class="num">4.18 %</td><td class="num">23/397</td><td class="num">5.79 %</td></tr>
   </table>
