--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -19,6 +19,7 @@ $$names_in_use$$
     <li>hadanie7</li>
     <li>Jens</li>
     <li>Kejvi</li>
+    <li>Klaus</li>
     <li>maggie</li>
     <li>Mark P.</li>
     <li>Medimaster</li>
@@ -29,6 +30,7 @@ $$names_in_use$$
     <li>U-Punkt</li>
     <li>Valkyrie2</li>
     <li>Velstadt</li>
+    <li>Volker</li>
     <li>Zecks</li>
   </ul>
 </div>
